Min width to ensure location is visible in project info window.

--- a/app/client/stylesheets/projects.less
+++ b/app/client/stylesheets/projects.less
@@ -34,6 +34,7 @@
       .coords {
         display: inline-block;
       }
+      min-width: 200px;
     }
     // Fixes conflicts with Semantic UI CSS.
     img {
